@@ -5,6 +5,7 @@ version 1.3.1 :
 	  the local file sent/received.
 	* Yahoo! has the following new "/" commands:  /join, /buzz
 	* Fix Yahoo! privacy bug
+	* Fix Jabber Get Info crash on busted servers
 
 version 1.3.0 (5/10/2005):
 	* Removed parts of the font selection dialog that were not respected
